# nanocov

./: Cargo.toml  README.md  test_log_scale.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/io/: cramino.rs  mod.rs
src/plotting/: mod.rs  multi_chrom.rs  stats.rs  utils.rs
src/plotting/themes/: mod.rs
src/utils/: mod.rs
test-data/: hg38.regions.bed  testbed.bed
test-out/: coverage.tsv  test_cramino_basic.txt  test_cramino_genome_size.txt
tests/: bed.rs  cramino.rs  integration.rs
tests/helpers/: mod.rs
