[package]
name = "nanocov"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
noodles-bam = { version = "0.80.0", features = ["async"] }
noodles-core = "0.17.0"
noodles-sam = { version = "0.76.0", features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
num_cpus = "1.16"
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
